--- a/02-浮点数登场.md
+++ b/02-浮点数登场.md
@@ -66,7 +66,26 @@ IEEE 754标准定义了三种特殊的数值类型：
 
 ## 2.2 深入理解各种格式
 
-### 2.2.1 深入float32 (Binary32)
+### 2.2.1 在线浮点数转换工具
+
+为了更好地理解浮点数的编码过程，推荐使用这个在线工具：
+
+🔗 **[浮点数转换器](https://flop.evanau.dev/float-converter)**
+
+这个工具可以：
+- 输入十进制数，查看其IEEE 754二进制表示
+- 输入二进制位模式，查看对应的十进制值
+- 直观展示符号位、指数位、尾数位的含义
+- 支持多种浮点格式（float32、float64等）
+- 实时计算和验证浮点数的编码
+
+**使用建议**：
+1. 尝试输入不同的数值（如0.1、1.0、-3.14等）
+2. 观察二进制位模式的变化规律
+3. 验证我们下面要学习的解码步骤
+4. 理解浮点数的精度限制
+
+### 2.2.2 深入float32 (Binary32)
 
 IEEE-754 Binary32（单精度）位示意图：
 
@@ -84,6 +103,8 @@ IEEE-754 Binary32（单精度）位示意图：
    - 指数值 = 124 − 127 = −3
 3. **尾数位** = 010…0₂ → 1 + 2⁻² = 1.25
 
+**💡 验证建议**：使用[浮点数转换器](https://flop.evanau.dev/float-converter)输入0.15625，验证二进制位模式是否匹配。
+
 #### 2.2.1.2 最终数值
 
 ```math
@@ -92,7 +113,7 @@ IEEE-754 Binary32（单精度）位示意图：
 
 **验证**：1.25 × 2⁻³ = 1.25 × 0.125 = 0.15625
 
-### 2.2.2 深入fp8e4m3
+### 2.2.3 深入fp8e4m3
 
 fp8e4m3是一种8位浮点格式，适合在资源受限的环境中使用。
 
@@ -108,6 +129,8 @@ fp8e4m3是一种8位浮点格式，适合在资源受限的环境中使用。
 1. **符号位** = 0 → 正数
 2. **指数位** = 0100₂ = 4 → 指数值 = 4 − 7 = −3
 3. **尾数位** = 010₂ → 尾数 = 1 + 2⁻² = 1.25
+
+**💡 验证建议**：使用[浮点数转换器](https://flop.evanau.dev/float-converter)输入0.15625，对比float32和fp8e4m3的表示差异。
 
 #### 2.2.2.2 最终数值
 
@@ -175,6 +198,12 @@ IEEE 754标准定义了多种特殊值：
 2. **灵活性**：可以表示非常大和非常小的数
 3. **权衡**：精度与范围的权衡
 4. **标准化**：IEEE 754标准确保跨平台兼容性
+
+**实践建议**：
+- 使用[浮点数转换器](https://flop.evanau.dev/float-converter)进行交互式学习
+- 尝试不同的数值，观察二进制编码的变化
+- 对比不同精度格式的表示差异
+- 验证理论计算与实际编码的一致性
 
 在下一章中，我们将深入探讨浮点数计算中的误差问题，理解为什么浮点数不能像整数那样"乖乖听话"。
 
