--- a/02-浮点数登场.md
+++ b/02-浮点数登场.md
@@ -9,7 +9,7 @@
 IEEE 754标准定义的浮点数表示公式：
 
 $$
-value = (-1)^s × (1 + Σ frac[i]·2^{-(i+1)}) × 2^{(exp - bias)}
+value = (-1)^s \times (1 + Σ frac[i]·2^{-(i+1)}) \times 2^{(exp - bias)}
 $$
 
 其中：
@@ -53,20 +53,15 @@ $$
 
 IEEE 754标准定义了三种特殊的数值类型：
 
-#### 2.1.3.1 指数位全 0
-- **若尾数位全 0** → 数值为 ±0
-- **若尾数位不全 0** → **subnormal number（次正规数）**
+- **指数位全 0**：
+  - 若尾数位全 0 → 数值为 ±0
+  - 若尾数位不全 0 → **subnormal number（次正规数）**
+- **指数位全 1**：
+  - 若尾数位全 0 → ±∞
+  - 若尾数位不全 0 → NaN
+- **其他情况**：**normal number（正规数）**
 
-#### 2.1.3.2 指数位全 1
-- **若尾数位全 0** → ±∞
-- **若尾数位不全 0** → NaN
-
-#### 2.1.3.3 其他情况
-- **normal number（正规数）**
-
-## 2.2 深入理解各种格式
-
-### 2.2.1 在线浮点数转换工具
+## 2.2 在线浮点数转换工具
 
 为了更好地理解浮点数的编码过程，推荐使用这个在线工具：
 
@@ -85,7 +80,77 @@ IEEE 754标准定义了三种特殊的数值类型：
 3. 验证我们下面要学习的解码步骤
 4. 理解浮点数的精度限制
 
-### 2.2.2 深入float32 (Binary32)
+## 2.3 浮点数编码
+
+### 2.3.1 十进制到二进制的转换逻辑
+
+将十进制浮点数转换为二进制是浮点数编码的第一步。这个过程可以分为整数部分和小数部分两个步骤：
+
+**整数部分转换**：使用**除2取余法**
+
+1. 将整数除以2，记录余数（0或1）
+2. 对商继续除以2，直到商为0
+3. 从下往上读取所有余数，即为二进制表示
+
+**示例**：将10转换为二进制
+
+| 除法 | 商 | 余数 |
+|------|----|----- |
+| 10 ÷ 2 | 5 | 0 |
+| 5 ÷ 2 | 2 | 1 |
+| 2 ÷ 2 | 1 | 0 |
+| 1 ÷ 2 | 0 | 1 |
+
+从下往上读取余数：1010₂
+
+**小数部分转换**：使用**乘2取整法**
+
+1. 将小数乘以2，记录整数部分（0或1）
+2. 保留小数部分，继续乘以2
+3. 重复上述步骤，直到小数部分为0或达到所需精度
+4. 从上往下读取所有整数部分，即为二进制表示
+
+**示例**：将0.625转换为二进制
+
+| 乘法 | 结果 | 整数部分 |
+|------|----|----- |
+| 0.625 × 2 | 1.25 | 1 |
+| 0.25 × 2 | 0.5 | 0 |
+| 0.5 × 2 | 1.0 | 1 |
+
+从上往下读取整数部分：0.101₂
+
+**科学记数法表示**：
+
+将二进制转换为科学记数法形式（1.xxx × 2^n）是浮点数编码的关键步骤：
+
+1. 将二进制小数点移动，使得小数点左侧只有一个"1"
+2. 记录小数点移动的位数和方向（右移为正，左移为负）
+
+**示例**：10.625₁₀ = 1010.101₂ = 1.010101 × 2^3
+
+**精确表示与舍入**：
+
+重要的是，**并非所有十进制数都能在二进制中精确表示**。例如：
+
+- 0.1₁₀ 在二进制中是无限循环小数：0.0001100110011...₂
+- 这导致了浮点数计算中的精度问题
+
+在有限位数的表示中，需要进行舍入，IEEE 754默认使用"向最接近的偶数舍入"规则。
+
+### 2.3.2 编码过程
+
+将十进制数转换为浮点数编码需要以下步骤：
+
+1. **将十进制数转换为二进制**（使用上述方法）
+2. **转换为科学记数法**（1.xxx * 2^n 格式）
+3. **提取各个部分**：
+   - 符号位：正数为0，负数为1
+   - 指数：加上偏移量（bias）
+   - 尾数：小数部分（隐含位1不存储）
+4. **按位模式排列**：符号位 + 指数位 + 尾数位
+
+### 2.3.3 深入float32 (Binary32)
 
 IEEE-754 Binary32（单精度）位示意图：
 
@@ -94,26 +159,18 @@ IEEE-754 Binary32（单精度）位示意图：
 | 字段   | **符号位** | **指数位**（8 bit） | **尾数位**（23 bit） |
 | 示例值 | 0         | 01111100 | 01000000000000000000000 |
 
-#### 2.2.1.1 解码步骤
-
-以示例值 `0 01111100 01000000000000000000000` 为例：
+**解码示例**：`0 01111100 01000000000000000000000₂`
 
 1. **符号位** = 0 → 正数
-2. **指数位** = 01111100₂ = 124₁₀
-   - 指数值 = 124 − 127 = −3
+2. **指数位** = 01111100₂ = 124₁₀ → 指数值 = 124 − 127 = −3
 3. **尾数位** = 010…0₂ → 1 + 2⁻² = 1.25
-
-**💡 验证建议**：使用[浮点数转换器](https://flop.evanau.dev/float-converter)输入0.15625，验证二进制位模式是否匹配。
-
-#### 2.2.1.2 最终数值
-
-```math
-0.15625 = (-1)^0 \times 1.25 \times 2^{-3}
-```
+4. **最终数值**：0.15625 = (-1)^0 × 1.25 × 2^{-3}
 
 **验证**：1.25 × 2⁻³ = 1.25 × 0.125 = 0.15625
 
-### 2.2.3 深入fp8e4m3
+**💡 提示**：使用[浮点数转换器](https://flop.evanau.dev/float-converter)输入0.15625，验证二进制位模式是否匹配。
+
+### 2.3.4 深入fp8e4m3
 
 fp8e4m3是一种8位浮点格式，适合在资源受限的环境中使用。
 
@@ -122,27 +179,20 @@ fp8e4m3是一种8位浮点格式，适合在资源受限的环境中使用。
 | 字段   | 符号位    | 指数位(4 bit) | 尾数位(3 bit) |
 | 示例值 | 0         | 0100     | 010        |
 
-#### 2.2.2.1 解码步骤
-
-以示例值 `0 0100 010` 为例：
+**解码示例**：`0 0100 010`
 
 1. **符号位** = 0 → 正数
 2. **指数位** = 0100₂ = 4 → 指数值 = 4 − 7 = −3
 3. **尾数位** = 010₂ → 尾数 = 1 + 2⁻² = 1.25
-
-**💡 验证建议**：使用[浮点数转换器](https://flop.evanau.dev/float-converter)输入0.15625，对比float32和fp8e4m3的表示差异。
-
-#### 2.2.2.2 最终数值
-
-```
-0.15625 = (-1)^0 * 1.25 * 2^-3
-```
+4. **最终数值**：0.15625 = (-1)^0 × 1.25 × 2^-3
 
 **注意**：fp8e4m3与float32在这个例子中表示相同的值，但精度和范围不同。
 
-## 2.3 浮点数的特点
+**💡 提示**：使用[浮点数转换器](https://flop.evanau.dev/float-converter)输入0.15625，对比float32和fp8e4m3的表示差异。
 
-### 2.3.1 表示范围 vs 精度
+## 2.4 浮点数的特点
+
+### 2.4.1 表示范围 vs 精度
 
 浮点数的一个重要特性是**表示范围与精度的权衡**：
 
@@ -150,7 +200,7 @@ fp8e4m3是一种8位浮点格式，适合在资源受限的环境中使用。
 - **低精度格式**（如fp8e4m3）：存储空间小，但精度低
 - **中等精度格式**（如Binary32）：平衡精度和存储空间
 
-### 2.3.2 密度分布
+### 2.4.2 密度分布
 
 浮点数在数轴上的分布是不均匀的：
 
@@ -163,7 +213,7 @@ fp8e4m3是一种8位浮点格式，适合在资源受限的环境中使用。
 - 接近0的区域：数值密集，精度高
 - 远离0的区域：数值稀疏，精度低
 
-### 2.3.3 特殊值处理
+### 2.4.3 特殊值处理
 
 IEEE 754标准定义了多种特殊值：
 
@@ -172,9 +222,9 @@ IEEE 754标准定义了多种特殊值：
 - **NaN**：表示"非数字"
 - **次正规数**：填补0和最小正规数之间的空隙
 
-## 2.4 实际应用考虑
+## 2.5 实际应用考虑
 
-### 2.4.1 精度选择
+### 2.5.1 精度选择
 
 选择合适的浮点格式需要考虑：
 
@@ -183,14 +233,14 @@ IEEE 754标准定义了多种特殊值：
 3. **性能要求**：运算速度要求如何？
 4. **兼容性**：是否需要与其他系统兼容？
 
-### 2.4.2 常见选择
+### 2.5.2 常见选择
 
 - **科学计算**：Binary64（double）
 - **图形渲染**：Binary32（float）
 - **机器学习**：float16或bfloat16
 - **嵌入式系统**：fp8e4m3等自定义格式
 
-## 2.5 小结
+## 2.6 小结
 
 浮点数相比整数引入了：
 
