--- a/01-整数先修课.md
+++ b/01-整数先修课.md
@@ -47,7 +47,7 @@ $$
 - 减法运算转换为加法运算
 - 统一的运算单元
 
-### 1.2.3 乘法(11 × 13)
+### 1.2.3 乘法概念
 
 $$
 M \times Q
@@ -56,7 +56,7 @@ $$
 - M=11: 被乘数
 - Q=13: 乘数
 
-#### 1.2.3.1 常规算法(unsigned int)
+### 1.2.4 常规乘法算法(unsigned int)
 
 | C | A    | Q    | M    | 备注                    |
 |---|------|------|------|----------------------------|
@@ -92,7 +92,7 @@ flowchart TD
 3. 右移C、A、Q
 4. 重复n次
 
-#### 1.2.3.2 布斯(Booth)算法(signed int)
+### 1.2.5 布斯(Booth)乘法算法(signed int)
 
 布斯算法用于有符号整数的乘法，通过观察相邻位来减少加法次数。
 
@@ -130,7 +130,7 @@ flowchart TD
 - 支持有符号数
 - 硬件实现效率高
 
-### 1.2.4 除法(unsigned int)
+### 1.2.6 除法(unsigned int)
 
 $$
 Q / M
