--- a/01-整数先修课.md
+++ b/01-整数先修课.md
@@ -7,9 +7,9 @@
 ### 1.1.1 表示范围
 
 二进制补码整数的表示范围：
-$$
+```math
 -2^{n-1}\ ---------\ 0\ ----------\ 2^{n-1} - 1
-$$
+```
 
 其中 n 是位数。
 
@@ -49,9 +49,9 @@ $$
 
 ### 1.2.3 乘法概念
 
-$$
+```math
 M \times Q
-$$
+```
 
 - M=11: 被乘数
 - Q=13: 乘数
@@ -132,9 +132,9 @@ flowchart TD
 
 ### 1.2.6 除法(unsigned int)
 
-$$
-Q / M
-$$
+```math
+Q \div M
+```
 
 - Q=7: 被除数
 - M=3: 除数
