--- a/01-整数先修课.md
+++ b/01-整数先修课.md
@@ -76,9 +76,9 @@ M \times Q
 ```mermaid
 %%{init: {'theme': 'base'}}%%
 flowchart TD
-    A["Start"] --> B["C, A ← 0\nM ← Multiplicand\nQ ← Multiplier\nCount ← n"]
+    A["Start"] --> B["C, A ← 0</br>M ← Multiplicand</br>Q ← Multiplier</br>Count ← n"]
     B --> C{"Q₀ = 1?"}
-    C -- No --> D["Shift right C, A, Q\nCount ← Count - 1"]
+    C -- No --> D["Shift right C, A, Q</br>Count ← Count - 1"]
     C -- Yes --> E["C, A ← A + M"]
     E --> D
     D --> F{"Count = 0?"}
@@ -99,14 +99,14 @@ flowchart TD
 ```mermaid
 %%{init: {'theme': 'base'}}%%
 flowchart TD
-    A["Start"] --> B["A ← 0, Q₋₁ ← 0\nM ← Multiplicand\nQ ← Multiplier\nCount ← n"]
+    A["Start"] --> B["A ← 0, Q₋₁ ← 0</br>M ← Multiplicand</br>Q ← Multiplier</br>Count ← n"]
     B --> C{"Q₀, Q₋₁"}
     C -->|=10| D["A ← A - M"]
     C -->|=01| E["A ← A + M"]
     C -->|=11\n=00| F
     D --> F
     E --> F
-    F["Arithmetic shift Right: A, Q, Q₋₁\nCount ← Count - 1"] --> G{"Count = 0?"}
+    F["Arithmetic shift Right: A, Q, Q₋₁</br>Count ← Count - 1"] --> G{"Count = 0?"}
     G -->|No| C
     G -->|Yes| H["End"]
 ```
@@ -144,12 +144,12 @@ Q \div M
 ```mermaid
 %%{init: {'theme': 'base'}}%%
 flowchart TD
-    A["Start"] --> B["A ← 0\nM ← Divisor\nQ ← Dividend\nCount ← n"]
+    A["Start"] --> B["A ← 0</br>M ← Divisor</br>Q ← Dividend</br>Count ← n"]
     B --> C["Shift left A, Q"]
     C --> D["A ← A - M"]
     D --> E{"A < 0?"}
     E -->|No| F["Q₀ ← 1"]
-    E -->|Yes| G["Q₀ ← 0\nA ← A + M"]
+    E -->|Yes| G["Q₀ ← 0</br>A ← A + M"]
     F --> H["Count ← Count - 1"]
     G --> H
     H --> I{"Count = 0?"}
