--- a/02-浮点数登场.md
+++ b/02-浮点数登场.md
@@ -8,9 +8,9 @@
 
 IEEE 754标准定义的浮点数表示公式：
 
-$$
+```math
 value = (-1)^s \times (1 + Σ frac[i]·2^{-(i+1)}) \times 2^{(exp - bias)}
-$$
+```
 
 其中：
 - **s**: 符号位 (0=正数, 1=负数)
@@ -42,9 +42,9 @@ $$
 
 1. **Trailing significand width** 不包含隐含位和符号位
 2. **最大正正规数通用计算公式**：
-   $$
+   ```math
    (2 - 2^{-t}) \times 2^{E}
-   $$
+   ```
    其中：
    - t = 尾数位数
    - Emax = 最大指数值
