--- a/03-浮点数计算误差.md
+++ b/03-浮点数计算误差.md
@@ -54,7 +54,7 @@ IEEE 754标准定义了四种舍入模式：
 
 ### 3.2.1 加法误差
 
-#### 3.2.1.1 大数加小数
+**大数加小数**
 
 ```python
 # 大数 + 小数 的问题
@@ -73,7 +73,7 @@ result = a + b
 4. 右移后，1.0的尾数变为0
 5. 结果仍然是1e16
 
-#### 3.2.1.2 精度丢失的数学解释
+**精度丢失的数学解释**
 
 在float64中：
 - 尾数精度：53位
@@ -83,7 +83,7 @@ result = a + b
 
 ### 3.2.2 减法误差（灾难性抵消）
 
-#### 3.2.2.1 相近数相减
+**相近数相减**
 
 ```python
 # 灾难性抵消示例
@@ -111,7 +111,7 @@ result = a - b
 
 ### 3.2.3 乘法误差
 
-#### 3.2.3.1 精度累积
+**精度累积**
 
 ```python
 # 连续乘法误差累积
@@ -125,7 +125,7 @@ for i in range(10):
 # 实际结果：1.0000000000000006e-10
 ```
 
-#### 3.2.3.2 溢出和下溢
+**溢出和下溢**
 
 ```python
 # 溢出示例
@@ -141,7 +141,7 @@ result = a * b  # 可能产生0或次正规数
 
 ### 3.2.4 除法误差
 
-#### 3.2.4.1 精度损失
+**精度损失**
 
 ```python
 # 大数除以小数
@@ -170,7 +170,7 @@ result = a / b
 
 ### 3.3.2 浮点数误差的衡量方法
 
-#### 3.3.2.1 绝对误差与相对误差
+**绝对误差与相对误差**
 
 **绝对误差**：实际值与理论值的差的绝对值
 ```math
@@ -200,7 +200,7 @@ print(f"绝对误差: {abs_err}")
 print(f"相对误差: {rel_err:.2e}")
 ```
 
-#### 3.3.2.2 ULP（Unit in the Last Place）
+**ULP（Unit in the Last Place）**
 
 **ULP定义**：两个相邻浮点数之间的最小差值，即浮点数表示中的最小单位。
 
@@ -247,7 +247,7 @@ ulp_count = ulp_error(actual, theoretical)
 print(f"0.1的ULP误差: {ulp_count:.2f} ULP")
 ```
 
-#### 3.3.2.3 不同误差衡量方法的比较
+**不同误差衡量方法的比较**
 
 | 误差类型 | 定义 | 优点 | 缺点 | 适用场景 |
 |---------|------|------|------|----------|
