--- a/03-浮点数计算误差.md
+++ b/03-浮点数计算误差.md
@@ -67,11 +67,35 @@ result = a + b
 ```
 
 **原因分析**：
-1. 1e16需要指数位约53
-2. 1.0需要指数位0
-3. 对齐时，1.0的尾数右移53位
-4. 右移后，1.0的尾数变为0
-5. 结果仍然是1e16
+
+**二进制推算过程**：
+
+1. **1e16的二进制表示**：
+   - 十进制：10000000000000000
+   - 二进制：1000110110000110101111000100000000000000000000000
+   - IEEE 754 (float64)：
+     - 符号位：0（正数）
+     - 指数：1077 (十进制) = 10000110101 (二进制)，偏移量为1023
+     - 尾数：1.0001101100001101011110001 (隐含的1.)
+
+2. **1.0的二进制表示**：
+   - 十进制：1.0
+   - 二进制：1.0
+   - IEEE 754 (float64)：
+     - 符号位：0（正数）
+     - 指数：1023 (十进制) = 01111111111 (二进制)，偏移量为1023
+     - 尾数：1.0 (隐含的1.)
+
+3. **对齐过程**：
+   - 指数差：1077 - 1023 = 54
+   - 需要将1.0的尾数右移54位进行对齐
+   - 1.0右移54位后：0.000000000000000000000000000000000000000000000000000001
+   - 由于float64只有52位尾数精度，右移54位后超出了精度范围
+
+4. **实际计算**：
+   - 对齐后的1.0变为0（因为超出了尾数精度）
+   - 1e16 + 0 = 1e16
+   - 结果仍然是1e16，1.0完全被忽略
 
 **精度丢失的数学解释**
 
@@ -92,17 +116,17 @@ b = 1.23456788
 result = a - b
 
 # 理论上：0.00000001
-
-# 实际结果（float32）：
-# 1.2345789 = 0 01111111 00111100000011010101110
-# 1.2345678 = 0 01111111 00111100000011010101110
-# 1.2345789 - 1.2345788 = 0
-
-# 实际结果（float64）：
-# 1.2345789 =             0 01111111111 0011110000001101010111001101111111010100111001110101
-# 1.2345678 =             0 01111111111 0011110000001101010110110011001001010101101111011010
-# 1.2345789 - 1.2345788 = 0 01111100100 0101011110011000111011100000000000000000000000000000 = 9.99999993922529e-09
+# 实际结果：0
 ```
+
+1.2345789 = 0 01111111 00111100000011010101110
+1.2345678 = 0 01111111 00111100000011010101110
+1.2345789 - 1.2345788 = 0
+
+实际结果（float64）：
+1.2345789 =             0 01111111111 0011110000001101010111001101111111010100111001110101
+1.2345678 =             0 01111111111 0011110000001101010110110011001001010101101111011010
+1.2345789 - 1.2345788 = 0 01111100100 0101011110011000111011100000000000000000000000000000 = 9.99999993922529e-09
 
 **误差放大**：
 - 相对误差 = |实际值 - 理论值| / |理论值|
@@ -213,19 +237,20 @@ print(f"相对误差: {rel_err:.2e}")
 ```python
 import math
 import struct
+import sys
 
 def ulp(x):
     """计算x处的ULP值"""
     if x == 0:
-        return float_info.min
+        return sys.float_info.min
     
-    # 获取x的指数
-    exp = math.floor(math.log2(abs(x)))
+    # 获取下一个可表示的浮点数
+    x_bits = struct.unpack('!Q', struct.pack('!d', abs(x)))[0]
+    next_x_bits = x_bits + 1
+    next_x = struct.unpack('!d', struct.pack('!Q', next_x_bits))[0]
     
-    # 计算该指数下的ULP
-    ulp_value = 2**(exp - 52)  # float64的尾数位宽是52
-    
-    return ulp_value
+    # ULP是当前值与下一个可表示值之间的差
+    return next_x - abs(x)
 
 def ulp_error(actual, expected):
     """计算误差的ULP数"""
@@ -288,10 +313,40 @@ test_cases = [
     (math.pi*3/2, -1.0)
 ]
 
-results = validate_float_algorithm(math.sin, test_cases, max_ulp_error=2.0)
+# 定义一个简单的自定义sin函数用于测试
+def my_sin(x):
+    """简单的sin近似计算，用于演示ULP误差"""
+    # 使用泰勒级数前几项计算sin
+    if abs(x) < 1e-10:
+        return x  # 小角度近似
+    
+    # 故意引入可测量的误差
+    return math.sin(x) * (1 + 1e-14)  # 增大误差量级
+
+# 修正后的测试用例
+better_test_cases = [
+    (0.0, 0.0),
+    (0.5, math.sin(0.5)),
+    (1.0, math.sin(1.0)),
+    (1.5, math.sin(1.5))
+]
+
+# 测试我们的自定义函数与标准库函数的ULP误差
+# 由于我们引入了误差(1e-14)，应该能观察到可测量的ULP误差
+results = validate_float_algorithm(my_sin, better_test_cases, max_ulp_error=2.0)
 for result in results:
     status = "✓" if result['passed'] else "✗"
     print(f"{status} x={result['input']:.2f}, ULP误差={result['ulp_error']:.2f}")
+
+# 注意：ULP误差的大小取决于:
+# 1. 引入的误差大小
+# 2. 当前数值大小下的ULP值（不同数量级的数，1 ULP的绝对大小不同）
+# 3. 舍入方式和浮点表示的特性
+#
+# 为什么1e-16的误差没有被测量到？
+# - 对于sin(0.5)≈0.479这样的值，其ULP大约是2^(-53)≈1.11e-16
+# - 当引入的误差(1e-16)小于ULP时，在浮点表示中会被完全舍入掉
+# - 增大误差到1e-14后，它大于ULP值，因此可以被测量到
 ```
 
 ## 3.6 小结
