解释为什么无点数密度分布不均匀

--- a/02-浮点数登场.md
+++ b/02-浮点数登场.md
@@ -207,11 +207,49 @@ fp8e4m3是一种8位浮点格式，适合在资源受限的环境中使用。
 ```
 0             0.1         0.5      1     2     4     8     16
 |-------------|-----------|--------|-----|-----|-----|-----|
-      密集         较密集      中等    中等   稀疏   稀疏  稀疏
+     密集         较密集      中等    中等  稀疏   稀疏  稀疏
 ```
 
-- 接近0的区域：数值密集，精度高
-- 远离0的区域：数值稀疏，精度低
+**分布不均匀的数学原理**：
+
+浮点数采用指数-尾数表示法，每个指数区间 `[2^k, 2^(k+1))` 内的可表示数值个数相同（float32中都是 2^23 个），但区间长度随指数指数增长（2^k）。因此：
+
+数值密度 = 数值个数 / 区间长度 = 2^23 / 2^k = 2^(23-k)
+
+这意味着数值密度随指数值呈指数递减。
+
+**具体区间密度分析（以float32为例）**：
+
+| 区间 | 指数值(e) | 区间长度 | 数值个数 | 相邻间距 | 密度 |
+|------|-----------|----------|----------|----------|------|
+| [0, 2^(-126)) | 次正规 | 2^(-126) | 2^23 | 2^(-149) | **极高** |
+| [2^(-126), 2^(-125)) | -126 | 2^(-126) | 2^23 | 2^(-149) | **极高** |
+| [0.5, 1) | -1 | 0.5 | 2^23 | 2^(-24) | 16,777,216 |
+| [1, 2) | 0 | 1 | 2^23 | 2^(-23) | 8,388,608 |
+| [2, 4) | 1 | 2 | 2^23 | 2^(-22) | 4,194,304 |
+| [4, 8) | 2 | 4 | 2^23 | 2^(-21) | 2,097,152 |
+| [8, 16) | 3 | 8 | 2^23 | 2^(-20) | 1,048,576 |
+
+**特殊区间分析**：
+- **[0, 0.1)**：包含所有次正规数 + 约123个指数区间（从-126到-4），总计约124×2^23 ≈ 10.4亿个数值，密度极高
+- **[0.1, 0.5)**：包含约2个指数区间，密度较高  
+- **[0.5, 1), [1, 2)**：各包含1个指数区间，密度中等
+- **更大区间**：随数值增大，相邻浮点数间距呈指数增长，密度快速降低
+
+**相邻数值间距公式**：
+```math
+gap = 2^e × 2^{-p} = 2^{(e-p)}
+```
+其中 e 为指数值，p 为尾数精度位数（float32中p=23）
+
+**为什么 [0, 0.1) 最密集？**
+
+0.1 ≈ 1.6 × 2^(-4)，因此 [0, 0.1) 区间包含了：
+1. 次正规数区间：[0, 2^(-126))，提供2^23个极小数值
+2. 正规数区间：从 [2^(-126), 2^(-125)) 到 [2^(-4), 2^(-3))，共约123个完整指数区间
+3. 每个指数区间都有相同的数值个数（2^23），但越接近0区间长度越小
+
+这种设计确保了**相对精度**的一致性：无论数值大小，都能提供大致相同的相对精度。
 
 ### 2.4.3 特殊值处理
 
