--- a/03-浮点数计算误差.md
+++ b/03-浮点数计算误差.md
@@ -120,12 +120,17 @@ result = a - b
 ```
 
 1.2345789 = 0 01111111 00111100000011010101110
+
 1.2345678 = 0 01111111 00111100000011010101110
+
 1.2345789 - 1.2345788 = 0
 
 实际结果（float64）：
+
 1.2345789 =             0 01111111111 0011110000001101010111001101111111010100111001110101
+
 1.2345678 =             0 01111111111 0011110000001101010110110011001001010101101111011010
+
 1.2345789 - 1.2345788 = 0 01111100100 0101011110011000111011100000000000000000000000000000 = 9.99999993922529e-09
 
 **误差放大**：
@@ -233,43 +238,111 @@ print(f"相对误差: {rel_err:.2e}")
 - 误差用ULP表示比用绝对误差更准确
 - 不同数量级的数，1 ULP的绝对大小不同
 
+**为什么1 ULP的绝对大小会变化？**
+
+这是由浮点数的指数-尾数表示法决定的。对于float32，在指数为 `e` 的区间内：
+```math
+1 ULP = 2^{(e-23)}
+```
+
+**不同数量级的ULP大小对比**：
+
+| 数量级范围 | 指数值(e) | 1 ULP的绝对大小 | 示例数值 | 相对精度 |
+|------------|-----------|----------------|----------|----------|
+| [0.5, 1) | -1 | 2^(-24) ≈ 5.96×10^(-8) | 0.5 | ~1.19×10^(-7) |
+| [1, 2) | 0 | 2^(-23) ≈ 1.19×10^(-7) | 1.0 | ~1.19×10^(-7) |
+| [2, 4) | 1 | 2^(-22) ≈ 2.38×10^(-7) | 2.0 | ~1.19×10^(-7) |
+| [4, 8) | 2 | 2^(-21) ≈ 4.77×10^(-7) | 4.0 | ~1.19×10^(-7) |
+| [1024, 2048) | 10 | 2^(-13) ≈ 1.22×10^(-4) | 1024.0 | ~1.19×10^(-7) |
+
+**关键洞察**：
+- 虽然ULP的**绝对大小**随数量级呈指数增长
+- 但**相对精度**（ULP/数值本身）在所有数量级下大致相同
+- 这确保了浮点数在不同范围内都能提供一致的相对精度
+
+**为什么ULP比绝对误差更有意义？**
+
+考虑两个计算误差：
+- 1.0的结果偏差1×10^(-7) → 约1 ULP
+- 1024.0的结果偏差1×10^(-4) → 约1 ULP
+
+用绝对误差看差异巨大，但用ULP衡量精度相当，这更符合浮点数的实际表示能力。
+
 **ULP计算**：
 ```python
 import math
 import struct
 import sys
 
-def ulp(x):
-    """计算x处的ULP值"""
+def ulp_float32(x):
+    """计算float32精度下x处的ULP值"""
     if x == 0:
-        return sys.float_info.min
+        return 2**(-149)  # 最小次正规数
     
     # 获取下一个可表示的浮点数
-    x_bits = struct.unpack('!Q', struct.pack('!d', abs(x)))[0]
+    x_bits = struct.unpack('!I', struct.pack('!f', abs(x)))[0]
     next_x_bits = x_bits + 1
-    next_x = struct.unpack('!d', struct.pack('!Q', next_x_bits))[0]
+    next_x = struct.unpack('!f', struct.pack('!I', next_x_bits))[0]
     
     # ULP是当前值与下一个可表示值之间的差
     return next_x - abs(x)
 
-def ulp_error(actual, expected):
+def ulp_error(actual, expected, precision='float64'):
     """计算误差的ULP数"""
-    ulp_value = ulp(expected)
+    if precision == 'float32':
+        ulp_value = ulp_float32(expected)
+    else:  # float64 - 使用内置的math.ulp函数
+        import math
+        ulp_value = math.ulp(expected) if expected != 0 else math.ulp(1.0)
+    
     absolute_error = abs(actual - expected)
     ulp_count = absolute_error / ulp_value
     
     return ulp_count
 
-# 示例
+# 示例1: float64精度
+import math
 x = 1.0
-print(f"1.0处的ULP: {ulp(x)}")
-print(f"下一个可表示的数: {x + ulp(x)}")
+print(f"1.0处的ULP (float64): {math.ulp(x):.2e}")
+print(f"下一个可表示的数: {x + math.ulp(x)}")
 
-# 计算0.1的ULP误差
-theoretical = 0.1
-actual = 0.100000001490116119384765625
-ulp_count = ulp_error(actual, theoretical)
-print(f"0.1的ULP误差: {ulp_count:.2f} ULP")
+# 示例2: float32中0.1的表示和ULP误差
+from decimal import Decimal, getcontext
+getcontext().prec = 50  # 设置高精度
+
+# 真正的理论值 (精确的 1/10)
+theoretical_01_exact = Decimal('0.1')
+actual_f32_01 = struct.unpack('f', struct.pack('f', 0.1))[0]  # float32实际值
+
+print(f"\n0.1在float32中的表示:")
+print(f"理论值(精确): {theoretical_01_exact}")
+print(f"float32实际值: {actual_f32_01:.25f}")
+
+# 计算float32中0.1的ULP误差
+ulp_value_f32 = ulp_float32(actual_f32_01)
+# 使用高精度计算误差，避免精度损失
+absolute_error_f32 = float(abs(theoretical_01_exact - Decimal(str(actual_f32_01))))
+ulp_count_f32 = absolute_error_f32 / ulp_value_f32
+
+print(f"\nfloat32中0.1的ULP分析:")
+print(f"绝对误差: {absolute_error_f32:.2e}")
+print(f"ULP值: {ulp_value_f32:.2e}")
+print(f"ULP误差: {ulp_count_f32:.2f} ULP")
+```
+
+**预期输出**：
+```
+1.0处的ULP (float64): 2.22e-16
+下一个可表示的数: 1.0000000000000002
+
+0.1在float32中的表示:
+理论值(精确): 0.1
+float32实际值: 0.1000000014901161193847656
+
+float32中0.1的ULP分析:
+绝对误差: 1.49e-09
+ULP值: 7.45e-09
+ULP误差: 0.20 ULP
 ```
 
 **不同误差衡量方法的比较**
@@ -351,61 +424,36 @@ for result in results:
 
 ## 3.6 小结
 
-### 浮点数计算误差的根本原因
+### 浮点数误差的核心原因
 
-1. **有限精度**：只能表示有限数量的数值
-2. **舍入误差**：超出精度的数值必须舍入
-3. **误差传播**：运算过程中的误差累积
-4. **数值不稳定**：某些算法对误差敏感
+1. **有限精度**：无法表示所有实数
+2. **舍入误差**：超出精度的数值必须舍入  
+3. **误差传播**：运算过程中误差累积
+4. **算法敏感性**：某些计算对误差极其敏感
 
-### 误差分析与衡量的核心概念
+### 关键概念
 
-1. **机器精度（Machine Epsilon）**：
-   - float32：ε ≈ 1.19 × 10⁻⁷
-   - float64：ε ≈ 2.22 × 10⁻¹⁶
-   - 定义了相对误差的理论上限
+**机器精度（Machine Epsilon）**：
+- float32: ε ≈ 1.19×10⁻⁷
+- float64: ε ≈ 2.22×10⁻¹⁶
 
-2. **误差衡量方法**：
-   - **绝对误差**：适用于固定精度要求
-   - **相对误差**：适用于一般精度分析
-   - **ULP误差**：浮点数精度的自然单位，最适合算法验证
+**误差衡量标准**：
+- **绝对误差**：|x - x̂|，直观但不适合比较不同数量级
+- **相对误差**：|x - x̂|/|x|，标准化但对接近0的值敏感
+- **ULP误差**：以浮点数自然单位衡量，最适合算法验证
 
-3. **ULP（Unit in the Last Place）**：
-   - 两个相邻浮点数之间的最小差值
-   - 不同数量级的数，1 ULP的绝对大小不同
-   - 提供了标准化的误差评估标准
+**ULP特性**：不同数量级的数，1 ULP的绝对大小不同，但相对精度一致。
 
-### 关键策略与最佳实践
+### 实用策略
 
-1. **理解误差来源**：
-   - 识别何时会出现表示误差和运算误差
-   - 了解不同运算（加减乘除）的误差传播特性
+1. **避免问题运算**：大数加小数、相近数相减
+2. **选择稳定算法**：Kahan求和、数值稳定的公式变换
+3. **合理精度要求**：算法验证通常要求 < 1-2 ULP
+4. **充分测试**：边界值、特殊值、误差累积场景
 
-2. **选择合适的算法**：
-   - 避免大数加小数（使用Kahan求和等稳定算法）
-   - 避免相近数相减（使用代数变换重新组织计算）
-   - 选择数值稳定的数学公式
+### 核心理念
 
-3. **精度控制策略**：
-   - 根据应用场景选择合适的浮点类型
-   - 控制中间结果，避免溢出和下溢
-   - 使用ULP误差进行算法精度验证
-
-4. **测试验证方法**：
-   - 建立合理的误差容忍度（如1-2 ULP）
-   - 使用多种误差衡量方法交叉验证
-   - 针对边界情况和特殊值进行测试
-
-### 实际应用指导
-
-浮点数虽然不能像整数那样"乖乖听话"，但通过深入理解其特性和采用系统化的误差分析策略，我们能够：
-
-- **量化误差**：用ULP等标准单位精确衡量误差大小
-- **预测误差**：基于机器精度和算法特性预估误差范围
-- **控制误差**：选择合适的算法和数据类型最小化误差
-- **验证结果**：建立可靠的精度验证体系
-
-通过掌握这些概念和方法，我们可以在实际应用中更加自信地使用浮点数，并在需要高精度的场景中做出明智的技术选择。
+浮点数虽然不如整数"听话"，但通过理解其特性、量化误差、选择合适算法，我们可以在实际应用中可靠地使用浮点数计算。
 
 ---
 
