补充sub normal关键知识

--- a/02-浮点数登场.md
+++ b/02-浮点数登场.md
@@ -8,8 +8,14 @@
 
 IEEE 754标准定义的浮点数表示公式：
 
+**正规数（Normal Numbers）**：
 ```math
 value = (-1)^s \times (1 + Σ frac[i]·2^{-(i+1)}) \times 2^{(exp - bias)}
+```
+
+**次正规数（Subnormal Numbers）**：
+```math
+value = (-1)^s \times (0 + Σ frac[i]·2^{-(i+1)}) \times 2^{(1 - bias)}
 ```
 
 其中：
@@ -17,6 +23,10 @@ value = (-1)^s \times (1 + Σ frac[i]·2^{-(i+1)}) \times 2^{(exp - bias)}
 - **frac[i]**: 尾数位的第i位
 - **exp**: 指数位的值
 - **bias**: 指数偏移量
+
+**关键差异**：
+- **正规数**：隐含位为 1，指数为 `exp - bias`
+- **次正规数**：隐含位为 0，指数固定为 `1 - bias`（最小正规数的指数）
 
 ### 2.1.2 各种精度格式对比
 
@@ -56,6 +66,7 @@ IEEE 754标准定义了三种特殊的数值类型：
 - **指数位全 0**：
   - 若尾数位全 0 → 数值为 ±0
   - 若尾数位不全 0 → **subnormal number（次正规数）**
+    - **重要**：次正规数的隐含位为 0（而非正规数的 1）
 - **指数位全 1**：
   - 若尾数位全 0 → ±∞
   - 若尾数位不全 0 → NaN
@@ -259,6 +270,22 @@ IEEE 754标准定义了多种特殊值：
 - **±∞**：表示无穷大
 - **NaN**：表示"非数字"
 - **次正规数**：填补0和最小正规数之间的空隙
+
+**次正规数示例（float32）**：
+
+考虑二进制位模式：`0 00000000 00000000000000000000001`
+
+1. **符号位** = 0 → 正数
+2. **指数位** = 00000000₂ = 0 → 次正规数
+3. **尾数位** = 00000000000000000000001₂ → 尾数 = 0 + 2⁻²³ = 2⁻²³
+4. **计算公式**：value = (-1)⁰ × (0 + 2⁻²³) × 2^(1-127) = 2⁻²³ × 2⁻¹²⁶ = 2⁻¹⁴⁹
+
+这就是float32的最小次正规数：2⁻¹⁴⁹ ≈ 1.4 × 10⁻⁴⁵
+
+**为什么需要次正规数？**
+- 填补0和最小正规数（2⁻¹²⁶）之间的空隙
+- 提供渐进式下溢（gradual underflow）
+- 保持浮点运算的某些数学性质
 
 ## 2.5 实际应用考虑
 
